--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -11,7 +11,7 @@
 </h1>
 
 <div class="hero-logo">
-  <img src="{{ $baseurl }}img/base16-eighties.svg">
+  <img src="{{ $baseurl }}/img/base16-eighties.svg">
 </div>
 
 <div style="text-align: center;">
